Upgrade: se agrego información sobre metadatos en HTML1

--- a/HTML1/index.html
+++ b/HTML1/index.html
@@ -129,6 +129,18 @@
     <hr>
   </div>
 
+  <div>
+    <h3>Metadatos</h3>
+    <p>Los metadatos son información que se le da a los navegadores web para que identifiquen de manera rapida la información</p>
+    <p>Los metadatos siempre se escriben dentro de la etiqueta "meta" y para seleccionar los metadatos en la etiqueta, el valor se agregara en "name", tambien hay otra sección de contenido "content" encontrandoce aqui la "MetaDescription"</p>
+  </div>
+
+  <meta name="description" content="Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur, laudantium." />
+
+  <meta name="keywords" content="diseño, desarrollo, paginas web" /> 
+
+  <link rel="stylesheet" type="text/css" href="www.google.com">
+
 
 
 </body>
