--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -12,5 +12,19 @@
     <p>CSS es un lenguaje de hojas de estilo (no de programacióno), sirviendo para darle propiedades a los elementos de HTML para asignarle un diseño. Un ejemplo claro es el diseño actual de este proyecto, que se encuentra todo diseñado con css.</p>
     <p>A continuacón una tabla con los elementos escenciales de css.</p>
   </div>
+  <br>
+  <div>
+    <h2>Tabla con propiedades/atributos de CSS</h2>
+    <table class="tableOne">
+      <tr>
+        <th>Atributo</th>
+        <th>Descripción</th>
+      </tr>
+      <tr>
+        <td>Margin</td>
+        <td>Establece un margen al rededor de un elemento (de forma externa). </td>
+      </tr>
+    </table>
+  </div>
 </body>
 </html>
