--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -24,6 +24,10 @@
         <td>Margin</td>
         <td>Establece un margen al rededor de un elemento (de forma externa). </td>
       </tr>
+      <tr>
+        <td>width</td>
+        <td>Establece el ancho de un elemento</td>
+      </tr>
     </table>
   </div>
 </body>
