Update 08/03/2024: Se agrego una actualización de información a la tabla css, donde se muestran distintos atributos con sus respectivas descripciones.

--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -26,7 +26,59 @@
       </tr>
       <tr>
         <td>width</td>
-        <td>Establece el ancho de un elemento</td>
+        <td>Establece el ancho de un elemento.</td>
+      </tr>
+      <tr>
+        <td>height</td>
+        <td>Establece la altura de un elemento</td>
+      </tr>
+      <tr>
+        <td>padding</td>
+        <td>Establece un "relleno" dentro del elemento.</td>
+      </tr>
+      <tr>
+        <td>border</td>
+        <td>Establece un borde a un elemento</td>
+      </tr>
+      <tr>
+        <td>border-radius</td>
+        <td>Establece un radio en los bordes de un elemento</td>
+      </tr>
+      <tr>
+        <td>display</td>
+        <td>Controla como se muestra un elemento en el flujo de documentos</td>
+      </tr>
+      <tr>
+        <td>float</td>
+        <td>Permite que un elemento flote a la izquierda o derecha de su contenedor</td>
+      </tr>
+      <tr>
+        <td>position</td>
+        <td>Espesifica el método de posicionamiento de un elemento</td>
+      </tr>
+      <tr>
+        <td>color</td>
+        <td>Define el color de un texto</td>
+      </tr>
+      <tr>
+        <td>font-family</td>
+        <td>Espesifica la fuente o familia de un textp</td>
+      </tr>
+      <tr>
+        <td>font-weight</td>
+        <td>Define el grosor de la fuente</td>
+      </tr>
+      <tr>
+        <td>text-align</td>
+        <td>Alinea el texto dentro de su contenedor</td>
+      </tr>
+      <tr>
+        <td>text-decoration</td>
+        <td>Establece decoración al texto, como subrayado, tachado o ninguno <br>(colocando "none" puedes quitar las decoraciones que incluya algún parrafo u etiqueta).</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
       </tr>
     </table>
   </div>
