Update 12/03/2024: Se agrego una actualización de información y diseño a la página, agregando 4 atributos más a la tabla y un disñeo al cuerpo junto con imagenes.

--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -8,13 +8,16 @@
 </head>
 <body>
   <div class="sector1">
-    <h1>CSS</h1>
+    <div>
+      <img class="img1" src="recursos/CSS3_logo_and_wordmark.svg.png" alt="">
+    </div>
     <p>CSS es un lenguaje de hojas de estilo (no de programacióno), sirviendo para darle propiedades a los elementos de HTML para asignarle un diseño. Un ejemplo claro es el diseño actual de este proyecto, que se encuentra todo diseñado con css.</p>
     <p>A continuacón una tabla con los elementos escenciales de css.</p>
+    <br>
   </div>
   <br>
   <div>
-    <h2>Tabla con propiedades/atributos de CSS</h2>
+    <h2 class="TituloTb">Tabla con propiedades/atributos de CSS</h2>
     <table class="tableOne">
       <tr>
         <th>Atributo</th>
@@ -77,10 +80,23 @@
         <td>Establece decoración al texto, como subrayado, tachado o ninguno <br>(colocando "none" puedes quitar las decoraciones que incluya algún parrafo u etiqueta).</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>background-img</td>
+        <td>Especifica la imagen que se utilizará como fondo para un elemento.</td>
+      </tr>
+      <tr>
+        <td>backgorund-size</td>
+        <td>Controla el tamaño de la imagen de fondo.</td>
+      </tr>
+      <tr>
+        <td>background-attachment</td>
+        <td>Controla si la imagen de fondo se desplaza con el contenido del contenedor o se mantiene fija en su posición mientras el contenido se desplaza.</td>
+      </tr>
+      <tr>
+        <td>background-repeat</td>
+        <td>Controla si la imagen de fondo se repite en el contenedor. </td>
       </tr>
     </table>
+    <br>
   </div>
 </body>
 </html>
