--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -11,12 +11,12 @@
     <div>
       <img class="img1" src="recursos/CSS3_logo_and_wordmark.svg.png" alt="">
     </div>
-    <p>CSS es un lenguaje de hojas de estilo (no de programacióno), sirviendo para darle propiedades a los elementos de HTML para asignarle un diseño. Un ejemplo claro es el diseño actual de este proyecto, que se encuentra todo diseñado con css.</p>
-    <p>A continuacón una tabla con los elementos escenciales de css.</p>
-    <br>
   </div>
   <br>
   <div>
+    <div class="contenedor">
+      <p class="parrafo">CSS es un lenguaje de hojas de estilo (no de programación), sirviendo para darle propiedades a los elementos de HTML para asignarle un diseño. Un ejemplo claro es el diseño actual de este proyecto, que se encuentra todo diseñado con css.</p>
+    </div>
     <h2 class="TituloTb">Tabla con propiedades/atributos de CSS</h2>
     <table class="tableOne">
       <tr>
@@ -24,75 +24,75 @@
         <th>Descripción</th>
       </tr>
       <tr>
-        <td>Margin</td>
+        <td class="centrar">Margin</td>
         <td>Establece un margen al rededor de un elemento (de forma externa). </td>
       </tr>
       <tr>
-        <td>width</td>
+        <td class="centrar">width</td>
         <td>Establece el ancho de un elemento.</td>
       </tr>
       <tr>
-        <td>height</td>
+        <td class="centrar">height</td>
         <td>Establece la altura de un elemento</td>
       </tr>
       <tr>
-        <td>padding</td>
+        <td class="centrar">padding</td>
         <td>Establece un "relleno" dentro del elemento.</td>
       </tr>
       <tr>
-        <td>border</td>
+        <td class="centrar">border</td>
         <td>Establece un borde a un elemento</td>
       </tr>
       <tr>
-        <td>border-radius</td>
+        <td class="centrar">border-radius</td>
         <td>Establece un radio en los bordes de un elemento</td>
       </tr>
       <tr>
-        <td>display</td>
+        <td class="centrar">display</td>
         <td>Controla como se muestra un elemento en el flujo de documentos</td>
       </tr>
       <tr>
-        <td>float</td>
+        <td class="centrar">float</td>
         <td>Permite que un elemento flote a la izquierda o derecha de su contenedor</td>
       </tr>
       <tr>
-        <td>position</td>
+        <td class="centrar">position</td>
         <td>Espesifica el método de posicionamiento de un elemento</td>
       </tr>
       <tr>
-        <td>color</td>
+        <td class="centrar">color</td>
         <td>Define el color de un texto</td>
       </tr>
       <tr>
-        <td>font-family</td>
+        <td class="centrar">font-family</td>
         <td>Espesifica la fuente o familia de un textp</td>
       </tr>
       <tr>
-        <td>font-weight</td>
+        <td class="centrar">font-weight</td>
         <td>Define el grosor de la fuente</td>
       </tr>
       <tr>
-        <td>text-align</td>
+        <td class="centrar">text-align</td>
         <td>Alinea el texto dentro de su contenedor</td>
       </tr>
       <tr>
-        <td>text-decoration</td>
+        <td class="centrar">text-decoration</td>
         <td>Establece decoración al texto, como subrayado, tachado o ninguno <br>(colocando "none" puedes quitar las decoraciones que incluya algún parrafo u etiqueta).</td>
       </tr>
       <tr>
-        <td>background-img</td>
+        <td class="centrar">background-img</td>
         <td>Especifica la imagen que se utilizará como fondo para un elemento.</td>
       </tr>
       <tr>
-        <td>backgorund-size</td>
+        <td class="centrar">backgorund-size</td>
         <td>Controla el tamaño de la imagen de fondo.</td>
       </tr>
       <tr>
-        <td>background-attachment</td>
+        <td class="centrar">background-attachment</td>
         <td>Controla si la imagen de fondo se desplaza con el contenido del contenedor o se mantiene fija en su posición mientras el contenido se desplaza.</td>
       </tr>
       <tr>
-        <td>background-repeat</td>
+        <td class="centrar">background-repeat</td>
         <td>Controla si la imagen de fondo se repite en el contenedor. </td>
       </tr>
     </table>
