Upgrade 19/03/2024: Se añadio una tabla más con contenido sobre HTML, espesificamente, etiquetas con sus respectivas descripciones

--- a/HTMLCSS/index.html
+++ b/HTMLCSS/index.html
@@ -98,5 +98,60 @@
     </table>
     <br>
   </div>
+  <br>
+  <div>
+    <h2>Tabla con etiquetas de HTML</h2>
+    <table class="tableOne">
+      <tr>
+        <th>Etiqueta</th>
+        <th>Descripción</th>
+      </tr>
+      <tr>
+        <td>html</td>
+        <td>Define el principio y el final de un documento HTML.</td>
+      </tr>
+      <tr>
+        <td>head</td>
+        <td>Contiene información sobre el documento HTML.</td>
+      </tr>
+      <tr>
+        <td>title</td>
+        <td>Define el titulo del documento.</td>
+      </tr>
+      <tr>
+        <td>body</td>
+        <td>Contiene el contenido visible del documento.</td>
+      </tr>
+      <tr>
+        <td>h1, ..., h6</td>
+        <td>Define encabezados de diferentes niveles.</td>
+      </tr>
+      <tr>
+        <td>p</td>
+        <td>Define un parrafo.</td>
+      </tr>
+      <tr>
+        <td>a</td>
+        <td>Define un hipervinculo.</td>
+      </tr>
+      <tr>
+        <td>img</td>
+        <td>Inserta una imagen</td>
+      </tr>
+      <tr>
+        <td>ul</td>
+        <td>Define una lista sin orden.</td>
+      </tr>
+      <tr>
+        <td>ol</td>
+        <td>Define una lista ordenada.</td>
+      </tr>
+      <tr>
+        <td>li</td>
+        <td>Define un elemento de la lista.</td>
+      </tr>
+    </table>
+    <br>
+  </div>
 </body>
 </html>
